Fixed footer spacing
Added additional padding underneath copyright

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -294,6 +294,7 @@ button {
 .footer__copyright {
    display: inline-block;
    margin-top: 3rem;
+   margin-bottom: 2rem;
 }
 
 @media (max-width: 970px) {
