--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -363,4 +363,5 @@ h1 {
  .footer__copyright {
     display: inline-block;
     margin-top: 3rem;
+    margin-bottom: 2rem;
  }
